complete 3 task today: for business, for college and for hub remaining mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -569,6 +569,262 @@
         </div>
       </div>
       <!-- Business section End -->
+      <!-- Employee Section Start -->
+      <div class="employee-container">
+        <div class="employee-cards">
+          <div class="employee-card">
+            <h3>EMPLOYEE UPSKILLNG</h3>
+            <p>
+              One of the key features of the company is its employee upskilling
+              services, which are designed to help businesses identify and fill
+              skills and knowledge gaps within their workforce.
+            </p>
+            <div class="employee-link">
+              <a href="#" class="employee-btn">Learn more</a>
+              <ion-icon
+                name="chevron-forward-outline"
+                class="emp-learn-icon"
+              ></ion-icon>
+            </div>
+          </div>
+          <div class="employee-card">
+            <h3>EMPLOYEE HIRING</h3>
+            <p>
+              Our recruitment service includes sourcing candidates, screening
+              resumes, conducting interviews, and presenting the most qualified
+              candidates to our clients
+            </p>
+            <div class="employee-link">
+              <a href="#" class="employee-btn">Learn more</a>
+              <ion-icon
+                name="chevron-forward-outline"
+                class="emp-learn-icon"
+              ></ion-icon>
+            </div>
+          </div>
+          <div class="employee-card">
+            <h3>EMPLOYEE MANAGEMNT SOSTWARE</h3>
+            <p>
+              Our employee management software provides a range of features,
+              including employee data management, attendance tracking,
+              performance management, and employee engagement tools
+            </p>
+            <div class="employee-link">
+              <a href="#" class="employee-btn">Learn more</a>
+              <ion-icon
+                name="chevron-forward-outline"
+                class="emp-learn-icon"
+              ></ion-icon>
+            </div>
+          </div>
+          <div class="employee-card">
+            <h3>MARKETING AND CRS PROJECTS</h3>
+            <p>
+              we hepl brands to advatsite their products in our platforms and
+              hepl in the completing CSR projects.
+            </p>
+            <div class="employee-link">
+              <a href="#" class="employee-btn">Learn more</a>
+              <ion-icon
+                name="chevron-forward-outline"
+                class="emp-learn-icon"
+              ></ion-icon>
+            </div>
+          </div>
+        </div>
+        <div class="employee-icons">
+          <div class="employee-icon">
+            <ion-icon name="happy-outline" class="emp-icon"></ion-icon>
+            <div class="icon-desc">
+              <h2>100+</h2>
+              <p>Happiest Clients</p>
+            </div>
+          </div>
+          <div class="employee-icon">
+            <ion-icon name="balloon-outline" class="emp-icon"></ion-icon>
+            <div class="icon-desc">
+              <h2>25+</h2>
+              <p>Success Sturies</p>
+            </div>
+          </div>
+          <div class="employee-icon">
+            <ion-icon name="folder-outline" class="emp-icon"></ion-icon>
+            <div class="icon-desc">
+              <h2>15+</h2>
+              <p>Current Projects</p>
+            </div>
+          </div>
+          <div class="employee-icon">
+            <ion-icon name="trophy-outline" class="emp-icon"></ion-icon>
+            <div class="icon-desc">
+              <h2>2</h2>
+              <p>Award & Honor</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Employee Section End -->
+      <!-- For College Section Start -->
+      <div class="for-college-container">
+        <div class="for-college">
+          <h2>EDYGRAD FOR COLLEGES</h2>
+          <p>
+            Edygrad's ecosystem bridges the gap between colleges and businesses,
+            providing a platform for students to connect with potential
+            employers and explore career opportunities. This is achieved through
+            a range of initiatives, including internships, job placements, and
+            mentorship program
+          </p>
+          <div class="for-college-link">
+            <a href="#" class="college-btn">Learn more</a>
+          </div>
+        </div>
+      </div>
+      <!-- For College Section End -->
+      <!-- College activities Section Start -->
+      <div class="college-activities-container">
+        <div class="activities-cards">
+          <div class="activity-card">
+            <div class="activity-img">
+              <img
+                src="assets/images/activity-1.png"
+                alt="Training and Placements"
+              />
+            </div>
+            <div class="activity-desc">
+              <h4>Training and Placements</h4>
+              <p>
+                Edygrad offers a comprehensive range of training and placement
+                services to colleges as part of its commitment to bridging the
+                gap between colleges and businesses. These services are designed
+                to help colleges prepare their students for the workforce and
+                equip them with the skills they need to succeed in their
+                careers. Edygrad's placement services also benefit colleges by
+                enhancing their reputation and helping them attract high-quality
+                students. When colleges partner with Edygrad, they gain access
+                to a network of businesses and opportunities that can help them
+                attract and retain students.
+              </p>
+              <div class="activity-link">
+                <a href="#" class="activity-btn">Learn more</a>
+                <ion-icon
+                  name="chevron-forward-outline"
+                  class="activity-icon"
+                ></ion-icon>
+              </div>
+            </div>
+          </div>
+          <div class="activity-card">
+            <div class="activity-desc">
+              <h4>Student skilling and workshops</h4>
+              <p>
+                Through its student skilling and workshops services, Edygrad
+                helps colleges provide their students with the skills they need
+                to succeed in the modern workplace. These services are designed
+                to supplement the traditional curriculum by providing students
+                with practical skills and knowledge that they can apply in their
+                future careers. Edygrad's student skilling and workshops
+                services cover a wide range of topics, including technical
+                skills, soft skills, and professional development.
+              </p>
+              <div class="activity-link">
+                <a href="#" class="activity-btn">Learn more</a>
+                <ion-icon
+                  name="chevron-forward-outline"
+                  class="activity-icon"
+                ></ion-icon>
+              </div>
+            </div>
+            <div class="activity-img">
+              <img
+                src="assets/images/activity-2.png"
+                alt="Student skilling and workshops"
+              />
+            </div>
+          </div>
+          <div class="activity-card">
+            <div class="activity-img">
+              <img
+                src="assets/images/activity-3.png"
+                alt="College management software"
+              />
+            </div>
+            <div class="activity-desc">
+              <h4>College management software</h4>
+              <p>
+                Edygrad offers a comprehensive college management software that
+                provides colleges with a range of tools to manage their
+                operations more efficiently. The software is designed to
+                streamline administrative processes and improve the overall
+                management of colleges. Here are some of the key features and
+                benefits of Edygrad's college management software.
+              </p>
+              <div class="activity-link">
+                <a href="#" class="activity-btn">Learn more</a>
+                <ion-icon
+                  name="chevron-forward-outline"
+                  class="activity-icon"
+                ></ion-icon>
+              </div>
+            </div>
+          </div>
+          <div class="activity-card">
+            <div class="activity-desc">
+              <h4>Events and marketing</h4>
+              <p>
+                Edygrad's events and marketing services are designed to benefit
+                colleges by helping them to increase their brand awareness,
+                attract and engage with their audience, and ultimately drive
+                growth and success in the education sector. With Edygrad's
+                expertise and support, colleges can effectively market
+                themselves and create engaging events that provide value to
+                their audience and stakeholders.
+              </p>
+              <div class="activity-link">
+                <a href="#" class="activity-btn">Learn more</a>
+                <ion-icon
+                  name="chevron-forward-outline"
+                  class="activity-icon"
+                ></ion-icon>
+              </div>
+            </div>
+            <div class="activity-img">
+              <img
+                src="assets/images/activity-4.png"
+                alt="Events and marketing"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- College activities Section End -->
+      <!-- For E-hub Section Start -->
+      <div class="hub-container">
+        <div class="hub-cards">
+          <div class="hub-desc">
+            <h2>Edygrad E-hub</h2>
+            <p>
+              We are excited to announce that our company is now offering
+              franchise opportunities for individuals interested in joining our
+              team and helping to revolutionize the education industry. Our
+              franchise model is based on the FOCO model with minimum
+              investment, which allows franchisees to own and operate their own
+              business while benefiting from the support and resources, you will
+              have access to our centralized support services, including
+              marketing, technology, and operations support. We focus on growing
+              your business and delivering exceptional services to your clients,
+              while we handle the day-to-day operations and back-end support
+            </p>
+            <div class="hub-link">
+              <a href="#" class="hub-btn">Learn more</a>
+            </div>
+          </div>
+          <div class="hub-img">
+            <img src="assets/images/hub.png" alt="Edygrad E-hub" />
+          </div>
+        </div>
+      </div>
+      <!-- For E-hub Section End -->
     </div>
 
     <!-- Web page script -->
