complete the full landing

--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
               </div>
             </div>
           </div>
-          <div class="activity-card">
+          <div class="activity-card order">
             <div class="activity-desc">
               <h4>Student skilling and workshops</h4>
               <p>
@@ -735,7 +735,7 @@
                 ></ion-icon>
               </div>
             </div>
-            <div class="activity-img">
+            <div class="activity-img order-2">
               <img
                 src="assets/images/activity-2.png"
                 alt="Student skilling and workshops"
@@ -788,7 +788,7 @@
                 ></ion-icon>
               </div>
             </div>
-            <div class="activity-img">
+            <div class="activity-img order-2">
               <img
                 src="assets/images/activity-4.png"
                 alt="Events and marketing"
@@ -801,7 +801,7 @@
       <!-- For E-hub Section Start -->
       <div class="hub-container">
         <div class="hub-cards">
-          <div class="hub-desc">
+          <div class="hub-desc hub-order">
             <h2>Edygrad E-hub</h2>
             <p>
               We are excited to announce that our company is now offering
@@ -825,8 +825,126 @@
         </div>
       </div>
       <!-- For E-hub Section End -->
+      <!-- Testiminial Section Star -->
+      <div class="testimonial-wrapper">
+        <div class="testimonial-container">
+          <div class="testiminial-navigators">
+            <div class="what-customers-say">
+              <small>1000+ happy stories</small>
+              <h4>What Our Customers Say About us</h4>
+            </div>
+            <div class="navigators-btns">
+              <button class="navigator-btn prev-btn" disabled>
+                <ion-icon
+                  name="arrow-back-outline"
+                  class="navigator-icon"
+                ></ion-icon>
+              </button>
+              <button class="navigator-btn next-btn">
+                <ion-icon
+                  name="arrow-forward-outline"
+                  class="navigator-icon"
+                ></ion-icon>
+              </button>
+            </div>
+          </div>
+          <div class="testimonial-cards">
+            <!-- Card 1 -->
+            <div class="testimonial-card">
+              <ion-icon
+                name="chatbubbles-outline"
+                class="testiminial-icon color-1"
+              ></ion-icon>
+              <p>
+                As a result of a career gap of two years, I was unable to crack
+                interviews. Thanks to Edygrad's job guarantee program, I was
+                able to get a job. I thank Edygrad for making my life better
+              </p>
+              <div class="person">
+                <img src="assets/images/customer-1.png" alt="krishnaveni" />
+                <div class="info">
+                  <h4>krishnaveni</h4>
+                  <p>Cple student</p>
+                </div>
+              </div>
+            </div>
+            <div class="testimonial-card">
+              <ion-icon
+                name="chatbubbles-outline"
+                class="testiminial-icon color-2"
+              ></ion-icon>
+              <p>
+                Whenever I introduce myself to my students, I feel proud, proud
+                to belong to the Edygrad family. edygrad is more than an online
+                platform to me, it is more like a family. All the members of the
+                AIR team, Teacher Care team, Student Care team are now my family
+                members. They are more than friends who always intend to help
+                us.
+              </p>
+              <div class="person">
+                <img src="assets/images/customer-2.png" alt="Usharani" />
+                <div class="info">
+                  <h4>Usharani</h4>
+                  <p>Teacher</p>
+                </div>
+              </div>
+            </div>
+            <div class="testimonial-card">
+              <ion-icon
+                name="chatbubbles-outline"
+                class="testiminial-icon color-3"
+              ></ion-icon>
+              <p>
+                Edygrad is where I discovered myself as an electrical engineer.
+                It has been a remarkable journey. It is unlikely that I would
+                have encountered such opportunities if I had not acquired these
+                skills through the edygrad cple program.
+              </p>
+              <div class="person">
+                <img src="assets/images/customer-3.png" alt="Rahul" />
+                <div class="info">
+                  <h4>Rahul</h4>
+                  <p>College Admin</p>
+                </div>
+              </div>
+            </div>
+            <div class="testimonial-card">
+              <ion-icon
+                name="chatbubbles-outline"
+                class="testiminial-icon color-4"
+              ></ion-icon>
+              <p>
+                In my capacity as a human resources manager, I am delighted to
+                see Edygrad has been a great help to me in making my work easier
+                to find skilled employees for my company.
+              </p>
+              <div class="person">
+                <img src="assets/images/customer-4.png" alt="Amar gurneet" />
+                <div class="info">
+                  <h4>Amar gurneet</h4>
+                  <p>HR</p>
+                </div>
+              </div>
+            </div>
+            <!-- Repeat similar card elements for a total of 8 cards -->
+          </div>
+        </div>
+      </div>
+      <!-- Testiminial Section End -->
+      <!-- Foter Section Start -->
+      <footer class="footer">
+        <h4>Follow us on:</h4>
+        <div class="social-media">
+          <ion-icon name="logo-instagram"></ion-icon>
+          <ion-icon name="logo-paypal"></ion-icon>
+          <ion-icon name="logo-twitter"></ion-icon>
+          <ion-icon name="logo-facebook"></ion-icon>
+          <ion-icon name="logo-youtube"></ion-icon>
+        </div>
+        <p>&copy; edygrad, Inc. 2022</p>
+      </footer>
+      <!-- Foter Section End -->
     </div>
-
     <!-- Web page script -->
     <script src="assets/js/script.js"></script>
     <!-- Include ScrollReveal.js -->
